nullaway_error_7D977ACA-62C2-4203-8EB3-EB6F35E49B9B.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-aop/src/main/java/org/springframework/aop/interceptor/AsyncExecutionAspectSupport.java:320: error: [NullAway] passing @Nullable parameter 'ex' where @NonNull is required
			ReflectionUtils.rethrowException(ex);
			                                 ^
    (see http://t.uber.com/nullaway )
